add bst